--- a/lce_dessert39/introduction.html
+++ b/lce_dessert39/introduction.html
@@ -351,14 +351,14 @@
     </div><!--wrap END-->
    
 
-    <!-- <ul class="Btn">
-      <li><a href="#for_store"><img src="img/location.png" alt=""></a></li>
-      <li><a href="#"><img src="img/phone-call.png" alt=""></a></li>
-      <li><button type="button"  id="topBtn"><img src="img/uparrow.png" alt=""></button></li>
-    </ul> -->
+
 
   </section>
-
+  <ul class="Btn">
+    <li><a href="#for_store"><img src="img/location.png" alt=""></a></li>
+    <li><a href="#"><img src="img/phone-call.png" alt=""></a></li>
+    <li><button type="button"  id="topBtn"><img src="img/uparrow.png" alt=""></button></li>
+  </ul>
 
   <footer>
     <div id="wrap">
