--- a/lce_jomalone/index.html
+++ b/lce_jomalone/index.html
@@ -444,6 +444,16 @@
       
   </section>
 
+
+  <div id="modal">
+    <div class="modal_popup">
+      <h3>안  내</h3>
+      <p>지금 보고 계신 페이지는 1920px의 화면에 최적화된 고정형 페이지입니다. 화면을 보시는 분께서는 참고해 주시기 바랍니다.</p>
+      <button type="button" class="popup_close">닫기</button>
+    </div>
+  </div>
+
+
   <footer>
     <div id="wrap">
       <div class="info">
